--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "learning-type-script-nomad",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc-watch --onSuccess \" node dist/index.js\" "
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "crypto-js": "^4.0.0",
+    "tsc-watch": "^4.4.0"
+  }
 }
